k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: salon-app
  namespace: salon-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salon-app
  template:
    metadata:
      labels:
        app: salon-app
    spec:
      containers:
        - name: salon-app
          image: dev7878/lumiere-salon:292cd237d790cdf05cdd47ea352e7bf8b7e97740
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
  strategy:
    canary:
      stableService: salon-app-stable
      canaryService: salon-app-canary
      steps:
        - setWeight: 25
        - pause:
            duration: 10s
        - setWeight: 50
        - pause:
            duration: 10s
        - setWeight: 75
        - pause:
            duration: 10s
        - setWeight: 100
