k8s/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: salon-db
  namespace: salon-app
  annotations:
    argocd.argoproj.io/sync-wave: "-2"

spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432 
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi


---

apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: salon-app
  annotations:
    argocd.argoproj.io/sync-wave: "-2"  
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
