k8s/stable-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: salon-app-stable
  namespace: salon-app
spec:
  type: ClusterIP
  selector:
    app: salon-app
  ports:
    - port: 3000
      targetPort: 3000
